// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser library statements adds error for library statements NOT at top of file 1`] = `
{
  "errors": [
    [Error: Syntax Error. (compile error &h2) Library statements may only appear at the top of a file],
  ],
  "statements": [
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 12,
              "line": 3,
            },
            "file": "",
            "start": {
              "column": 22,
              "line": 2,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 3,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 3,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 15,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 20,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 16,
            "line": 2,
          },
        },
        "text": "main",
      },
    },
    Library {
      "tokens": {
        "filePath": {
          "isReserved": false,
          "kind": "String",
          "literal": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "v30/bslCore.brs",
          },
          "location": {
            "end": {
              "column": 37,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 20,
              "line": 4,
            },
          },
          "text": ""v30/bslCore.brs"",
        },
        "library": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 4,
            },
          },
          "text": "Library",
        },
      },
    },
  ],
}
`;

exports[`parser library statements adds error for library statements inside of function body 1`] = `
{
  "errors": [
    [Error: Syntax Error. (compile error &h2) Library statements may only appear at the top of a file],
  ],
  "statements": [
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 12,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 22,
              "line": 2,
            },
          },
          "statements": [
            Library {
              "tokens": {
                "filePath": {
                  "isReserved": false,
                  "kind": "String",
                  "literal": BrsString {
                    "inArray": false,
                    "kind": 3,
                    "value": "v30/bslCore.brs",
                  },
                  "location": {
                    "end": {
                      "column": 41,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 24,
                      "line": 3,
                    },
                  },
                  "text": ""v30/bslCore.brs"",
                },
                "library": {
                  "isReserved": false,
                  "kind": "Identifier",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 23,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 16,
                      "line": 3,
                    },
                  },
                  "text": "Library",
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 15,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 20,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 16,
            "line": 2,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;

exports[`parser library statements does not prevent usage of \`library\` as object property name 1`] = `
{
  "errors": [],
  "statements": [
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 12,
              "line": 6,
            },
            "file": "",
            "start": {
              "column": 22,
              "line": 2,
            },
          },
          "statements": [
            Assignment {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 25,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 3,
                  },
                },
                "text": "buildings",
              },
              "tokens": {
                "equals": {
                  "isReserved": false,
                  "kind": "Equal",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 27,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 26,
                      "line": 3,
                    },
                  },
                  "text": "=",
                },
              },
              "value": AALiteral {
                "close": {
                  "isReserved": false,
                  "kind": "RightBrace",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 17,
                      "line": 5,
                    },
                    "file": "",
                    "start": {
                      "column": 16,
                      "line": 5,
                    },
                  },
                  "text": "}",
                },
                "elements": [
                  {
                    "name": BrsString {
                      "inArray": false,
                      "kind": 3,
                      "value": "library",
                    },
                    "value": Literal {
                      "_location": {
                        "end": {
                          "column": 50,
                          "line": 4,
                        },
                        "file": "",
                        "start": {
                          "column": 29,
                          "line": 4,
                        },
                      },
                      "value": BrsString {
                        "inArray": false,
                        "kind": 3,
                        "value": "Gotham City Library",
                      },
                    },
                  },
                ],
                "open": {
                  "isReserved": false,
                  "kind": "LeftBrace",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 29,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 28,
                      "line": 3,
                    },
                  },
                  "text": "{",
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 6,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 6,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 15,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 20,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 16,
            "line": 2,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;

exports[`parser library statements does not prevent usage of \`library\` as varible name 1`] = `
{
  "errors": [],
  "statements": [
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 12,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 22,
              "line": 2,
            },
          },
          "statements": [
            Assignment {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 23,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 3,
                  },
                },
                "text": "library",
              },
              "tokens": {
                "equals": {
                  "isReserved": false,
                  "kind": "Equal",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 25,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 24,
                      "line": 3,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": {
                  "end": {
                    "column": 47,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 26,
                    "line": 3,
                  },
                },
                "value": BrsString {
                  "inArray": false,
                  "kind": 3,
                  "value": "Gotham City Library",
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 15,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 20,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 16,
            "line": 2,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;

exports[`parser library statements parses rest of file with ONLY the library keyword present at root level 1`] = `
{
  "errors": [
    [Error: Syntax Error. (compile error &h2) Missing string literal after library keyword],
  ],
  "statements": [
    Library {
      "tokens": {
        "filePath": undefined,
        "library": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 2,
            },
          },
          "text": "library",
        },
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 12,
              "line": 5,
            },
            "file": "",
            "start": {
              "column": 22,
              "line": 3,
            },
          },
          "statements": [
            Assignment {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 23,
                    "line": 4,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 4,
                  },
                },
                "text": "library",
              },
              "tokens": {
                "equals": {
                  "isReserved": false,
                  "kind": "Equal",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 25,
                      "line": 4,
                    },
                    "file": "",
                    "start": {
                      "column": 24,
                      "line": 4,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": {
                  "end": {
                    "column": 40,
                    "line": 4,
                  },
                  "file": "",
                  "start": {
                    "column": 26,
                    "line": 4,
                  },
                },
                "value": BrsString {
                  "inArray": false,
                  "kind": 3,
                  "value": "Your Library",
                },
              },
            },
          ],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 5,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 5,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 15,
              "line": 3,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 3,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 20,
            "line": 3,
          },
          "file": "",
          "start": {
            "column": 16,
            "line": 3,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;

exports[`parser library statements still parses entire file after invalid library statement 1`] = `
{
  "errors": [
    [Error: Syntax Error. (compile error &h2) Found unexpected token 'cat' after library statement],
    [Error: Syntax Error. (compile error &h2) Found unexpected token 'dog' after library statement],
    [Error: Syntax Error. (compile error &h2) Found unexpected token 'mouse' after library statement],
  ],
  "statements": [
    Library {
      "tokens": {
        "filePath": undefined,
        "library": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 2,
            },
          },
          "text": "library",
        },
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 12,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 22,
              "line": 3,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 15,
              "line": 3,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 3,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 20,
            "line": 3,
          },
          "file": "",
          "start": {
            "column": 16,
            "line": 3,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;

exports[`parser library statements supports library statements at top of file 1`] = `
{
  "errors": [],
  "statements": [
    Library {
      "tokens": {
        "filePath": {
          "isReserved": false,
          "kind": "String",
          "literal": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "v30/bslCore.brs",
          },
          "location": {
            "end": {
              "column": 37,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 20,
              "line": 2,
            },
          },
          "text": ""v30/bslCore.brs"",
        },
        "library": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 2,
            },
          },
          "text": "Library",
        },
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 12,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 22,
              "line": 3,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 15,
              "line": 3,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 3,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 20,
            "line": 3,
          },
          "file": "",
          "start": {
            "column": 16,
            "line": 3,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;

exports[`parser library statements supports multiple library statements separated by colon 1`] = `
{
  "errors": [],
  "statements": [
    Library {
      "tokens": {
        "filePath": {
          "isReserved": false,
          "kind": "String",
          "literal": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "v30/bslCore.brs",
          },
          "location": {
            "end": {
              "column": 37,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 20,
              "line": 2,
            },
          },
          "text": ""v30/bslCore.brs"",
        },
        "library": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 2,
            },
          },
          "text": "Library",
        },
      },
    },
    Library {
      "tokens": {
        "filePath": {
          "isReserved": false,
          "kind": "String",
          "literal": BrsString {
            "inArray": false,
            "kind": 3,
            "value": "v30/bslCore.brs",
          },
          "location": {
            "end": {
              "column": 65,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 48,
              "line": 2,
            },
          },
          "text": ""v30/bslCore.brs"",
        },
        "library": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": 47,
              "line": 2,
            },
            "file": "",
            "start": {
              "column": 40,
              "line": 2,
            },
          },
          "text": "Library",
        },
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "location": {
            "end": {
              "column": 12,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 22,
              "line": 3,
            },
          },
          "statements": [],
        },
        "end": {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": {
            "end": {
              "column": 15,
              "line": 3,
            },
            "file": "",
            "start": {
              "column": 12,
              "line": 3,
            },
          },
          "text": "sub",
        },
        "parameters": [],
        "returns": 11,
      },
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": 20,
            "line": 3,
          },
          "file": "",
          "start": {
            "column": 16,
            "line": 3,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;
